# text-extraction

./: .dockerignore  .env.example  APIDOC.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  models.py
app/api/routes/: extract.py
app/core/: config.py  errors.py
app/schemas/: __init__.py  request.py  response.py
app/services/classification/: __init__.py  rules.py  service.py  taxonomy.py
app/services/enrichment/: __init__.py  base.py  fallback.py  openai_provider.py  service.py
app/services/extraction/: base.py  resolver.py  service.py
app/services/extraction/strategies/: __init__.py  office_legacy.py  office_modern.py  pdf.py  text_virtual.py
app/services/storage/: __init__.py  temp_files.py
spec-kit/: 01-product-spec.md  02-api-contract.md  03-architecture.md  04-implementation-plan.md  openapi.yaml
tests/: test_classification.py  test_enrichment_service.py  test_file_validation.py  test_remote_files.py  test_text_virtual.py
