[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-extraction"
version = "0.1.0"
description = "FastAPI service for extracting text from documents with optional OpenAI enrichment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "python-multipart>=0.0.9,<1",
  "python-magic>=0.4.27,<1",
  "PyMuPDF>=1.24,<2",
  "python-docx>=1.1,<2",
  "python-pptx>=0.6,<2",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
ai = [
  "openai>=1.0,<2",
]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]
